force-app/main/default/objects/Process_Component__c/Process_Component__c.object-meta.xml
<CustomObject>
    <label>Process Component</label>
    <nameField>
        <label>Process Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>