force-app/main/default/objects/Process_Component__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMP_ProcessActionForm</fullName>
            </value>
            <value>
                <fullName>CMP_DocumentUpload</fullName>
            </value>
            <value>
                <fullName>CMP_ReviewerDetail</fullName>
            </value>
            <value>
                <fullName>CMP_PayableDetails</fullName>
            </value>
            <value>
                <fullName>CMP_dispatch_Component</fullName>
            </value>
            <value>
                <fullName>CMP_receiver_component</fullName>
            </value>
            <value>
                <fullName>CMP_document_handedover</fullName>
            </value>
            <value>
                <fullName>CMP_DocumentHandler</fullName>
            </value>
            <value>
                <fullName>CMP_MODT_creation</fullName>
            </value>
            <value>
                <fullName>CMP_paymentschedule</fullName>
            </value>
            <value>
                <fullName>CMP_DocumentPreview</fullName>
            </value>
            <value>
                <fullName>CMP_recalibration</fullName>
            </value>
            <value>
                <fullName>CMP_document_storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>