force-app/main/default/objects/Process_Component__c/fields/Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Process Components</relationshipLabel>
    <relationshipName>Process_Components</relationshipName>
    <type>Lookup</type>
</CustomField>