force-app/main/default/objects/Process_Component__c/fields/Process_Path_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Task_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Path Task Detail</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Components</relationshipLabel>
    <relationshipName>Process_Components</relationshipName>
    <type>Lookup</type>
</CustomField>