force-app/main/default/objects/Process_Component__c/fields/Process_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Task_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Process Task Detail</label>
    <referenceTo>Process_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Components</relationshipLabel>
    <relationshipName>Process_Components</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>